--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a{
     
     float: left;
     padding: 12px;
-    color: rgb(31, 28, 28);
+    color: rgb(43, 39, 39);
     text-decoration: none;
     font-size: 15px;
     width: 25%; 
@@ -54,7 +54,7 @@ margin-right: 10px;
 }
 .link-bt{
     text-decoration: none;
-    background-image: linear-gradient(lightsalmon,tomato);
+    background-image: linear-gradient(tomato,lightsalmon);
     padding: 15px 8px;
     border-radius: 5px;
     color: papayawhip;
@@ -64,5 +64,23 @@ margin-right: 10px;
 }
 h1{
     font-size:40px;
-     height:30px;
+     height:25px;
 }
+.half-width12{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+    margin-top: 60px;
+}
+.half-width12 img{
+    width: 75%;
+}
+.ab{
+    color: rgb(43, 38, 38);
+    
+}
+.p{
+    color: firebrick;
+}
+
