--- a/style.css
+++ b/style.css
@@ -49,12 +49,13 @@ a{
     color: rgb(211, 121, 88) ;
 }
 .p1{
-margin-top: 60px;
-margin-right: 10px;  
-font-size: 20px;  
+    margin-top: 60px;
+    margin-right: 10px;  
+    font-size: 20px;   
 }
 .sec1{
     margin-top: 60px;
+    margin-bottom: 20%;
 }
 .link-bt{
     text-decoration: none;
@@ -67,7 +68,7 @@ font-size: 20px;
     text-align: center;
 }
 h1{
-    font-size:40px;
+    font-size:35px;
      height:25px;
 }
 .half-width12{
@@ -101,8 +102,8 @@ h1{
     border-image-slice: 1;
     border-radius: 10%;
     float: left;
-    margin-right: 55px ;
-    padding-right: 40px;
+    margin-right: 30px ;
+    padding-right: 30px;
     padding-left: 37px;
    
     
@@ -143,7 +144,8 @@ h1{
     font-weight: bold;
      margin-left: 40%;
      margin-top: 10%;
-     margin-bottom: 10%;
+     margin-bottom: 20%;
+     height: 10px;
      color: rgb(25,25,112);
 }
 
@@ -152,4 +154,53 @@ h1{
     float: left;
     margin-left:20px ;
     padding: 2px;
+    margin-bottom: 20%;
+}
+.profile1{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+    
+    
+}
+
+.half-width1000{
+    width: 30%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.service{
+    width: 50%;
+    
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width0001{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.single{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 5px;
+    height:70% ;
+    background-color: white;
+    
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightsalmon,yellow);
+    border-image-slice: 1;
+}
+#web-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,rgb(113, 113, 223),rgb(240, 104, 131));
+    border-image-slice: 1;
+}
+.dream-area{
+    margin-bottom: 20%;
 }
