--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1{
 
 .cards{
     width:25% ;
-    height: 20%;
+    height: 30%;
     
     border: 2px solid whitesmoke;
     margin: 2px ;
@@ -173,9 +173,9 @@ h1{
 }
 .service{
     width: 50%;
-    
+    margin-bottom: 5%;
     float: left;
-    margin-left: 5%;
+    margin-left: 3%;
     padding-left: 2%;
 }
 .half-width0001{
@@ -227,8 +227,9 @@ h1{
     float: left;
     margin-left: 25%;
     padding-left: 10px;
-    padding-top: 40%;
+    padding-top: 37%;
     height: 2px;
+    color: whitesmoke;
     
 
 }
@@ -275,4 +276,12 @@ footer{
 }
 .link123:hover{
     box-shadow: 2px 2px 10px rgb(173, 166, 166);
+}
+.footer3{
+    text-align: center;
+    
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 10%;
+
 }
